job category and application added
