# internal/handler/job/job.go
@@ -1,6 +1,7 @@
 package job
 
 import (
+	"log"
 	"net/http"
 
 	"github.com/BoruTamena/jobboard/internal/constant/errors"
@@ -15,8 +16,10 @@ type jobHandler struct {
 	jobModule module.Job
 }
 
-func NewJobHandler() handler.Job {
-	return jobHandler{}
+func NewJobHandler(jmodule module.Job) handler.Job {
+	return jobHandler{
+		jobModule: jmodule,
+	}
 }
 
 // @tags Job
@@ -100,6 +103,44 @@ func (j jobHandler) GetJob(ctx *gin.Context) {
 }
 
 // @tags Job
+// @Summary Create a job category
+// @Description Create a job category
+// @Accept json
+// @Produce json
+// @Param job body  dto.JobCategoryDto true "job category request body"
+// @Success 201 {object} response.Response
+// @Router /job/category [post]
+// @security BearerAuth
+func (j jobHandler) CreateJobCategory(ctx *gin.Context) {
+	// create job
+	var jobCategory dto.JobCategoryDto
+
+	if err := ctx.Bind(&jobCategory); err != nil {
+
+		err = errors.BadInput.Wrap(err, "bind error").
+			WithProperty(errors.ErrorCode, 400)
+
+		ctx.Error(err)
+
+		return
+
+	}
+	// calling job module
+	err, job_res := j.jobModule.CreateJobCategory(ctx, jobCategory)
+	if err != nil {
+
+		ctx.Error(err)
+		return
+
+	}
+	ctx.JSON(http.StatusCreated, response.Response{
+		Status: string(response.Sucess),
+		Data:   job_res,
+	})
+
+}
+
+// @tags Job
 // @Summary Get a job category
 // @Description Get a job category
 // @Accept json
@@ -110,7 +151,6 @@ func (j jobHandler) GetJob(ctx *gin.Context) {
 func (j jobHandler) GetJobCategory(ctx *gin.Context) {
 
 	// calling job module
-
 	err, job_categories := j.jobModule.GetJobCategories(ctx)
 
 	if err != nil {
@@ -122,6 +162,47 @@ func (j jobHandler) GetJobCategory(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, response.Response{
 		Status: string(response.Sucess),
 		Data:   job_categories,
+	})
+
+}
+
+// @tags Job
+// @Summary update job status
+// @Description update job status
+// @Accept json
+// @Produce json
+// @Param id path string true "job id is required"
+// @Param jobStatus body dto.JobStatusDto true "job status is required"
+// @Success 201 {object} response.Response
+// @Router /job/{id}/status [patch]
+// @security BearerAuth
+func (j jobHandler) UpdateJobStatus(ctx *gin.Context) {
+
+	var jobStatus dto.JobStatusDto
+
+	if err := ctx.Bind(&jobStatus); err != nil {
+
+		err := errors.BadInput.Wrap(err, "couldn't bind user input").
+			WithProperty(errors.ErrorCode, 500)
+
+		log.Println(err)
+
+		return
+
+	}
+
+	err, job := j.jobModule.UpdateJobStatus(ctx, jobStatus)
+
+	if err != nil {
+
+		ctx.Error(err)
+
+		return
+	}
+
+	ctx.JSON(http.StatusCreated, response.Response{
+		Status: string(response.Sucess),
+		Data:   job,
 	})
 
 }
